# rk_image_tool

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: toolchain-linux-aarch64.cmake  toolchain-linux-armhf.cmake  toolchain-mingw64.cmake
docs/: BUILD.md  FORMAT.md  ROADMAP.md  SD_LAYOUT.md
examples/: pack.sh
scripts/: dist.sh  term2png.py
src/cli/: cli.h  cmd_info.c  cmd_listdisks.c  cmd_pack.c  cmd_restore.c  cmd_sdboot.c  cmd_tui.c  cmd_unpack.c  cmd_upgrade.c  cmd_verify.c  main.c
src/common/: crc.c  crc.h  disk.c  disk.h  fat32.c  fat32.h  gpt.c  gpt.h  idblock.c  idblock.h  mbr.c  mbr.h  md5.c  md5.h  misc_cmd.c  misc_cmd.h  parameter.c  parameter.h  progress.c  progress.h  rc4.c  rc4.h  rk_types.h  rkimg.c  rkimg.h  rkpack.c  rkpack.h  sdcard.c  sdcard.h  sink.c  sink.h  util.c  util.h  xz_writer.c  xz_writer.h
src/platform/: disk_linux.c  disk_macos.c  disk_windows.c
tests/: CMakeLists.txt  test_basic.c
